# CPP-HomeWorks

Lesson10_CMake/Task10.1/: CMakeLists.txt  Task10.1.cpp  Task10.1.sln  Task10.1.vcxproj
Lesson10_CMake/Task10.2/: .gitignore  CMakeLists.txt  Parallelogram.h  Quadrangle.h  Rect.cpp  Task10.2.cpp  Task10.2.sln  Task10.2.vcxproj  Task10.2.vcxproj.filters  Triangle.cpp  Triangle.h
Lesson11_LIBR/Task11.1/: Task11.1.sln
Lesson11_LIBR/Task11.2/: Task11.2.sln
Lesson11_LIBR/Task11.3/: CMakeLists.txt  Leave.cpp  Leave.h  Source.cpp
Lesson11_Lib/Task11.1/: Task11.1.sln
Lesson11_Lib/Task11.2/: CMakeLists.txt  Task11.2.sln
Lesson1_IDE_VS/: HomeWork01.cpp  HomeWork01.sln  HomeWork01.vcxproj
Lesson1_IDE_VS/Debug/: HomeWork01.exe.recipe  HomeWork01.ilk  HomeWork01.vcxproj.FileListAbsolute.txt  vc143.idb
Lesson2_S/: .gitignore
Lesson2_SiP/Task2.1/: Task2.1.cpp  Task2.1.sln  Task2.1.vcxproj
Lesson2_SiP/Task2.2/: Task2.2.cpp  Task2.2.sln  Task2.2.vcxproj
Lesson2_SiP/Task2.3/: Task2.3.cpp  Task2.3.sln  Task2.3.vcxproj
Lesson3_Class/Task3.1/: Task3.1.cpp  Task3.1.sln  Task3.1.vcxproj
Lesson3_Class/Task3.2/: Task3.2.cpp  Task3.2.sln  Task3.2.vcxproj
Lesson4_INC/Task4.1/: Task4.1.cpp  Task4.1.sln  Task4.1.vcxproj  out.txt
Lesson4_INC/Task4.2/: Task4.2.cpp  Task4.2.sln  Task4.2.vcxproj  out.txt
Lesson5_NasP/Task5.1/: Task5.1.cpp  Task5.1.sln  Task5.1.vcxproj
Lesson5_NasP/Task5.2/: Task5.2.cpp  Task5.2.sln  Task5.2.vcxproj
Lesson5_NasP/Task5.3/: Task5.3.cpp  Task5.3.sln  Task5.3.vcxproj
LessonCPPL-4/Task4.2/: CMakeLists.txt  main.cpp
Races/: Races.sln
(+372 files in other folders)
