cmake_minimum_required(VERSION 3.22.0)
project(Shape_10.2)
add_executable (Shape_10.2 Task10.2.cpp Figure.h Figure.cpp Triangle.h Triangle.cpp Box.h Box.cpp equilateralTr.h equilateralTr.cpp isoscelesTr.h isoscelesTr.cpp Parallelogram.h Parallelogram.cpp Print.h Print.cpp Quadrangle.h Quadrangle.cpp Rect.h Rect.cpp rightTr.h rightTr.cpp Romb.h Romb.cpp)
